syntax = "proto3";
package proto;
option java_package = "com.conorjc.proto";
option java_multiple_files = true;

message Printer {
    bool status = 1;
    string testpage = 2;
    string documents = 3;
}
//The Request and Responses - what we send and what we receive
//from between the client and server
/* --------------------------------------------------------- */
message PrinterStatusRequest {
    Printer status = 1;
}
message PrinterStatusResponse {
    string result = 1;
}
/* --------------------------------------------------------- */
message CheckPrinterRequest {
    Printer status = 1;
}
message CheckPrinterResponse {
    string network = 1;
    string cartridge = 2;
    string ink = 3;
    string result = 4;
}
/* --------------------------------------------------------- */
message PrintTestRequest{
    Printer status = 1;
}
message PrintTestResponse{
    string result = 1;
}
/* --------------------------------------------------------- */
message DocumentRequest{
    Printer dts = 1;
}
message DocumentResponse{
    string result = 1;
}
/* --------------------------------------------------------- */
//define and name service - make readable
service PrintService{
    //Unary
    rpc PrinterStatus(PrinterStatusRequest) returns (PrinterStatusResponse) {};
    //Server Streaming
    rpc CheckPrinter(CheckPrinterRequest)returns (stream CheckPrinterResponse) {};
    //Client Streaming
    rpc PrintTest(stream PrintTestRequest) returns (PrintTestResponse) {};
    //Bi-Di Stream
    rpc Document(stream DocumentRequest) returns (stream DocumentResponse) {};
}